@@ -2,6 +2,11 @@
 
 2019-08-06
 
+  * To get user's home dir, revert back to retrieving via environmental
+  variable (conforms to FreeDesktop Trash Spec).
+
+2019-08-06
+
   * rmw v0.7.03 has been released.
 
 2019-07-30
